# stardew-stats

./: .gitignore  Cargo.toml  Justfile  README.md  index-6f42a5159965882e.js  index-6f42a5159965882e_bg.wasm  index.html  stardew-stats-cd14e4b75f5e40bf.js  stardew-stats-cd14e4b75f5e40bf_bg.wasm
.github/workflows/: ci.yml
src/: app.rs  main.rs  stardew.rs
