[package]
name = "stardew-stats"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.47"
log = "0.4.14"
roxmltree = { version = "0.14.0", features = ["std"] }
wasm-bindgen = "0.2.70"
wasm-logger = "0.2.0"
web-sys = "0.3.47"
wee_alloc = "0.4.5"
yew = "0.17.4"
yewtil = "0.3.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
