[package]
name = "stardew-stats"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.57"
console_error_panic_hook = "0.1.7"
gloo-file = "0.2.1"
js-sys = "0.3.57"
log = "0.4.17"
roxmltree = { version = "0.14.1", features = ["std"] }
wasm-bindgen = "0.2.80"
wasm-logger = "0.2.0"
web-sys = "0.3.57"
wee_alloc = "0.4.5"
yew = "0.19.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
