[package]
name = "stardew-stats"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.65"
console_error_panic_hook = "0.1.7"
gloo-file = "0.2.3"
js-sys = "0.3.60"
log = "0.4.17"
roxmltree = { version = "0.15.0", features = ["std"] }
wasm-bindgen = "0.2.83"
wasm-logger = "0.2.0"
web-sys = "0.3.60"
yew = "0.19.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
